MDL-80045 block_starredcourses: Fix cards alignment in small screens

--- a/theme/boost/scss/moodle/blocks.scss
+++ b/theme/boost/scss/moodle/blocks.scss
@@ -219,6 +219,9 @@ $card-gutter : $card-deck-margin * 2;
         margin-right: 0;
         .dashboard-card {
             width: calc(100% - #{$card-gutter}) !important;
+            @include media-breakpoint-down(xs) {
+                width: 100% !important;
+            }
         }
     }
 }
